--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -7,10 +7,10 @@ apply plugin: "com.google.gms.google-services"
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
  */
-react {
+//react {
     /* Autolinking */
-    autolinkLibrariesWithApp()
-}
+    //autolinkLibrariesWithApp()
+//}
 
 def enableProguardInReleaseBuilds = false
 def jscFlavor = 'org.webkit:android-jsc:+'
