--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,7 +24,6 @@
     "axios": "^1.6.2",
     "react": "18.2.0",
     "react-native": "0.73.5",
-    "react-native-background-job": "^2.2.0",
     "react-native-camera": "^4.2.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-config": "^1.5.1",
@@ -51,6 +50,9 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli": "^20.0.1",
+    "@react-native-community/cli-platform-android": "^20.0.2",
+    "@react-native-community/cli-platform-ios": "^20.0.2",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
